[gd_scene load_steps=5 format=3 uid="uid://bxgcocrl30nkv"]

[ext_resource type="Script" path="res://scripts/cocoa_maker.gd" id="1_rrbp6"]
[ext_resource type="Texture2D" uid="uid://cuqw7w3rkhvj3" path="res://art/cocoa_shop/cocoa_maker.png" id="2_glwi0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpeyw"]
size = Vector2(3, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7d7av"]
size = Vector2(4, 18)

[node name="CocoaMaker" type="Node2D"]
script = ExtResource("1_rrbp6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-4, -6)
texture = ExtResource("2_glwi0")

[node name="Area2D_Grinder" type="Area2D" parent="Sprite2D"]
position = Vector2(-8, 7)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D_Grinder"]
position = Vector2(-5.5, -7.5)
shape = SubResource("RectangleShape2D_kpeyw")

[node name="Timer" type="Timer" parent="Sprite2D/Area2D_Grinder"]

[node name="Area2D_TurnOn" type="Area2D" parent="Sprite2D"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D_TurnOn"]
position = Vector2(10, 6)
shape = SubResource("RectangleShape2D_7d7av")

[node name="Timer" type="Timer" parent="Sprite2D/Area2D_TurnOn"]

[node name="DrinkOutputMarker" type="Marker2D" parent="Sprite2D"]
position = Vector2(17, 13)

[connection signal="body_entered" from="Sprite2D/Area2D_Grinder" to="." method="_on_area_2d_grinder_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D_Grinder" to="." method="_on_area_2d_grinder_body_exited"]
[connection signal="body_entered" from="Sprite2D/Area2D_TurnOn" to="." method="_on_area_2d_turn_on_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D_TurnOn" to="." method="_on_area_2d_turn_on_body_exited"]
